@@ -1,19 +1,20 @@
 # Fundamental
 Automation script for Fundamental 0.1.7
 
-Installation:
+Installation in Tampermonkey:
 https://github.com/Dimelsondroid/Fundamental/raw/main/Fundamental.user.js
 
-Current script version - 1.1.3
+Current script version - 1.2.0\
+Will be updated upon reaching new parts of the game or if I feel something should be changed.
 
 Credits goes to awWhy for making this wonderful game and Tobes for helping with code parts :)
 
 For Fundomental v.0.1.7 Vacuum --> pre-Intergalactic --> Void (with some limitations)
 
-The code might not be perfect and take all situations into account, expect disappointment on some occasions :)
+The code is not perfect and do not take all situations into account, expect disappointment on some occasions :)
 
 Not sure now how it will perform pre-Vacuum as initial pre-Vacuum working code was modified... Currently testing pre-Vacuum on the Fundamental test server.
-Also do not know how it will perform when Vacuum Intergalactic is bought, but by that time you should have most automations bought in Strangeness i guess and script might not be needed.
+Also do not know how it will perform when Vacuum Intergalactic is bought, but by that time you should have most automations bought in Strangeness I guess and script might not be needed.
 
 Chrome recommended, as i am playing in it and script is working. F12 to open console in it.
 If you are playing on side resourses like 'galaxy.click' - after opening console choose any in-game element first (Ctrl+Shift+C in Chrome) or script won't apply.
@@ -25,8 +26,9 @@ Do not forget to switch off Reset confirmation for stages you want if you don't 
 
 Auto-Stage reset is triggered when cloudGoalInput field value goal is reached as an additional condition to getting Iron element.
 There's 'Stage reset' toggle as well.\
-**Currently implemented only for Vacuum stage of the game and not tested pre-Vacuum**
+**pre-Vacuum do turn off confirmations before toggling 'Stage reset' button or it might softlock the game till you confirm stage reset or reload the page. Alternatively - set 'stageResetEnable = false' in console**
 
-All script auto-resets are turned on, be aware before commiting script to console, look for 'do...Reset' variables to change initial state - true\false.
+All script auto-resets are turned on, be aware before commiting script to console, look for 'do...Reset' variables to change initial state - true\false.\
+Save mass should not be needed pre-Vacuum.
 
 Some variables (till 'end of variables' comment) can be changed in console if needed and for personal tuning.
